<resources>
    <string name="app_name">DashboardUi</string>
    <string name="my_wallet">My Wallet</string>
    <string name="gan_yu">Gan Yu</string>
    <string name="my_wallet_level_7">My wallet level 7+</string>
    <string name="eur">EUR</string>
    <string name="_192_42">192,42</string>
    <string name="savings">Savings</string>
    <string name="usd">USD</string>
    <string name="_994_10">994,10</string>
    <string name="main_income">Main Income</string>
    <string name="_321_42">321,42</string>
    <string name="expense">Expense</string>
    <string name="_3_892_13">3.892,13</string>
    <string name="assets">Assets</string>
</resources>